[macOS] Frequent leaks seen under WebCore::gpuIDForDisplayMask https://bugs.webkit.org/show_bug.cgi?id=189685 <rdar://problem/44541974>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-09-18
Reviewed by Per Arne Vollan.

* platform/mac/PlatformScreenMac.mm:
(WebCore::gpuIDForDisplayMask):

Canonical link: https://commits.webkit.org/204671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236148 268f45cc-cd09-0410-ab3c-d52691b4dbfc